[package]
name = "traefik-cloudflare-auth"
version = "0.1.0"
authors = ["FrictionlessPortals <8077147+frictionlessportals@users.noreply.github.com>"]
description = "Auth server to verify Cloudflare Access JWT tokens for Traefik"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
axum = "0.5"
anyhow = "1.0"
tracing = "0.1"
once_cell = "1.15"
jsonwebtoken = "8.1"
tokio = { version = "1.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }